@@ -6,7 +6,7 @@ dnl GNOME_COMMON_INIT
 
 AC_DEFUN([GNOME_COMMON_INIT],
 [
-	GNOME_ACLOCAL_DIR=`$ACLOCAL --print-ac-dir`/gnome
+	GNOME_ACLOCAL_DIR=`$ACLOCAL --print-ac-dir`/gnome-macros
 	AC_SUBST(GNOME_ACLOCAL_DIR)
 
 	ACLOCAL="$ACLOCAL -I $GNOME_ACLOCAL_DIR"
